<resources>
    <string name="app_name">BloodShare</string>
    <string name="hello_login_fragment">Hello login fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="connect_with_facebook">Connect with Facebook</string>
    <string name="does_not_have_account_register">Doesn\'t have account? <b>Register</b></string>
    <string name="welcome_logo">Welcome Logo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="retype_password">Retype Password</string>
    <string name="personal">Personal</string>
    <string name="organization">Organization</string>
    <string name="home_address">Home Address</string>
    <string name="agree_with_terms_and_conditions">Agree with Terms and Conditions</string>
    <string name="register">Register</string>
    <string name="default_location">Default Location</string>
    <string name="almost_there">Almost There</string>
    <string name="greeting_after_registration">Thank you for registering with us. One more step, you need to check your email to activate your account.</string>
    <string name="verify">Verify</string>
    <string name="verify_your_account">Verify Your Account</string>
    <string name="sent_verification_code">We have send verification code to your email</string>
    <string name="enter_verification_code">Enter your verification code here</string>
    <string name="send">Send</string>
    <string name="does_not_get_the_code_resend">Doesn\'t get the code? <b>Resend</b></string>
    <string name="donor_history">Donor History</string>
    <string name="_5_gives_2_received">5 gives, 2 received</string>
    <string name="_5_new_messages">5 New Messages</string>
    <string name="message">Message</string>
    <string name="_4_users_need_blood">4 users need blood</string>
    <string name="blood_needed">Blood Needed</string>
    <string name="search_donor_near_you">Search donor near you</string>
    <string name="search_donor">Search Donor</string>
    <string name="thanks">THANKS</string>
    <string name="blood_received">BLOOD RECEIVED</string>
    <string name="blood_give">BLOOD GIVE</string>
    <string name="blood_type_a">Blood type: A</string>
    <string name="agung_sepruloh">Agung Sepruloh</string>
    <string name="_75">75</string>
    <string name="_100">100</string>
    <string name="_330">330</string>
</resources>
