<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SubmitFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:theme="@style/BlueTheme"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:padding="@dimen/space_large">


        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/almost_there"
            style="@style/Title" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/greeting_after_registration"
            android:paddingHorizontal="@dimen/space_large"
            style="@style/Info" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verify"
            android:layout_marginTop="@dimen/space_extra"
            android:background="@drawable/blue_button"/>
    </LinearLayout>

</layout>